--- a/.github/workflows/semgrep.yaml
+++ b/.github/workflows/semgrep.yaml
@@ -8,8 +8,6 @@ on:
 
 permissions:
   contents: read
-  security-events: write
-  actions: read
 
 jobs:
   semgrep-scan:
@@ -20,16 +18,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run Semgrep
-        run: semgrep ci --sarif --output=semgrep-results.sarif || true
+      - name: Run Semgrep (text output)
+        run: semgrep ci --config auto || true
         env:
           SEMGREP_RULES: >-
             p/default
             p/security-audit
             p/secrets
 
-      - name: Upload Semgrep results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
+      - name: Run Semgrep (SARIF)
+        run: semgrep ci --sarif --output=semgrep-results.sarif --config auto || true
+        env:
+          SEMGREP_RULES: >-
+            p/default
+            p/security-audit
+            p/secrets
+
+      - name: Upload Semgrep SARIF as artifact
+        uses: actions/upload-artifact@v4
         if: always()
         with:
-          sarif_file: semgrep-results.sarif
+          name: semgrep-sarif-results
+          path: semgrep-results.sarif
+          retention-days: 30
