ci: switch trivy workflow from self-hosted to ubuntu-latest

--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -2,16 +2,16 @@ name: Trivy Security Scan
 
 on:
   push:
-    branches: [main, master]
+    branches: [main, master, develop]
   pull_request:
-    branches: [main, master]
+    branches: [main, master, develop]
 
 permissions:
   contents: read
 
 jobs:
   trivy-scan:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
