ci: switch semgrep workflow from self-hosted to ubuntu-latest

--- a/.github/workflows/semgrep.yaml
+++ b/.github/workflows/semgrep.yaml
@@ -2,16 +2,16 @@ name: Semgrep Security Scan
 
 on:
   push:
-    branches: [main, master]
+    branches: [main, master, develop]
   pull_request:
-    branches: [main, master]
+    branches: [main, master, develop]
 
 permissions:
   contents: read
 
 jobs:
   semgrep-scan:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     container:
       image: semgrep/semgrep
     steps:
